--- a/components/Stack/Stack.module.css
+++ b/components/Stack/Stack.module.css
@@ -1,7 +1,8 @@
 .Stack {
   display: flex;
   flex-wrap: wrap;
-  margin: calc(var(--spacing-base) * -1);
+  margin-top: calc(var(--spacing-base) * -1);
+  margin-left: calc(var(--spacing-base) * -1);
 }
 
 .Stack-column {
@@ -25,43 +26,48 @@
 }
 
 .Stack-extraTight {
-  margin: calc(var(--spacing-extra-tight) * -1);
+  margin-top: calc(var(--spacing-extra-tight) * -1);
+  margin-left: calc(var(--spacing-extra-tight) * -1);
 }
 .Stack-tight {
-  margin: calc(var(--spacing-tight) * -1);
+  margin-top: calc(var(--spacing-tight) * -1);
+  margin-left: calc(var(--spacing-tight) * -1);
 }
 .Stack-loose {
-  margin: calc(var(--spacing-loose) * -1);
+  margin-top: calc(var(--spacing-loose) * -1);
+  margin-left: calc(var(--spacing-loose) * -1);
 }
 .Stack-extraLoose {
-  margin: calc(var(--spacing-extra-loose) * -1);
+  margin-top: calc(var(--spacing-extra-loose) * -1);
+  margin-left: calc(var(--spacing-extra-loose) * -1);
 }
 
 .Stack-noWrap {
   flex-wrap: nowrap;
-  margin-top: 0;
-  margin-bottom: 0;
 }
 
 .Child {
-  padding: var(--spacing-base);
+  margin-top: var(--spacing-base);
+  margin-left: var(--spacing-base);
 }
 
 .Stack-extraTight > .Child {
-  padding: var(--spacing-extra-tight);
+  margin-top: var(--spacing-extra-tight);
+  margin-left: var(--spacing-extra-tight);
 }
 .Stack-tight > .Child {
-  padding: var(--spacing-tight);
+  margin-top: var(--spacing-tight);
+  margin-left: var(--spacing-tight);
 }
 .Stack-loose > .Child {
-  padding: var(--spacing-loose);
+  margin-top: var(--spacing-loose);
+  margin-left: var(--spacing-loose);
 }
 .Stack-extraLoose > .Child {
-  padding: var(--spacing-extra-loose);
+  margin-top: var(--spacing-extra-loose);
+  margin-left: var(--spacing-extra-loose);
 }
 
 .Stack-noWrap > .Child {
   flex-shrink: 0;
-  padding-top: 0;
-  padding-bottom: 0;
 }
